use LinkedList
O(1) get and remove of head and tail